<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Tariqi</string>
    <string name="sign_up">Sign Up</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="have_account">have account?</string>
    <string name="sign_in">sign in</string>
    <string name="add_trip">Add Trip</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="sync">Sync</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="location">Location</string>
    <string name="trip_type">Trip Type</string>
    <string name="start">Start</string>
    <string name="add_note">Add Note</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="signin1">Sign In</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="orsignin">Or Sign In With</string>
    <string name="donthaveaccount">Don\'t Have Account</string>
    <string name="donthaveaccount1">"Don't Have Account?"<a href="http://www.google.com">Register</a></string>
    <string name="trip_name">Trip Name</string>
    <string name="start_point">Start Point</string>
    <string name="endpoint">End Point</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="addtip">Add Trip</string>

    <string name="details_item">show details</string>
    <string name="trip_name_history">trip name</string>
    <string name="start_position_hestory">start position</string>
    <string name="end_position_history">end position</string>
    <string name="time_history">time</string>
    <string name="date_history">date</string>
    <string name="note_history">notes</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="Forget_Password">Forget Password ?</string>
    <string name="facebook_app_id">1265402910597955</string>
    <string name="fb_login_protocol_scheme">fb1265402910597955</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_note">Enter Your Note</string>
    <string name="delet_trip">Delet Trip</string>
    <string name="showless">Show Less</string>
    <string name="edit_data">Edit Data</string>
    <string name="edit_trip">Update Data</string>
    <string name="sign_up_with_google">Sign up with google</string>


    <!--       <string name="default_web_client_id" translatable="false">219834984630-frslme7uchngfhb866gg5jl2826213n7.apps.googleusercontent.com</string>-->
    <!--    <string name="gcm_defaultSenderId" translatable="false">219834984630</string>-->
    <!--    <string name="google_api_key" translatable="false">AIzaSyAe7I27DjskbPR6gzSB8_IFyaDTa8mi8_0</string>-->
    <!--    <string name="google_app_id" translatable="false">1:219834984630:android:7cc29894eb23ff4920de17</string>-->
    <!--    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyAe7I27DjskbPR6gzSB8_IFyaDTa8mi8_0</string>-->
    <!--    <string name="google_storage_bucket" translatable="false">tariqi-609d8.appspot.com</string>-->
    <!--    <string name="project_id" translatable="false">tariqi-609d8</string>-->


</resources>