<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_home"
          android:icon="@drawable/home"
          android:title="@string/home"/>
        <item android:id="@+id/menu_history"
            android:icon="@drawable/history"
            android:title="@string/history"/>
    </group>
    <item android:title="Others">
        <menu>
            <item android:id="@+id/menu_sync"
                android:icon="@drawable/sync"
                android:title="@string/sync"/>
            <item android:id="@+id/menu_log_out"
                android:icon="@drawable/logout"
                android:title="@string/log_out"/>
        </menu>
    </item>
</menu>