<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_trip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_trip_name"
        android:layout_marginVertical="10dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_location"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_trip_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip_type"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="@drawable/button_text_color"
        android:text="@string/start"
        android:layout_below="@id/linear_layout"/>
    <ImageView
        android:id="@+id/imageView_note"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/sticky_notes"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>