<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tripnamehistory"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginBottom="25dp"
            android:text="@string/trip_name_history"
            android:textAllCaps="true"
            android:textColor="#090909"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtstartPos"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginBottom="25dp"
            android:text="@string/start_position_hestory"
            android:textColor="#090909"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtType"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginBottom="25dp"
            android:text="@string/end_position_history"
            android:textColor="#090909"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginBottom="25dp"
            android:text="@string/time_history"
            android:textColor="#090909"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginBottom="25dp"
            android:text="@string/date_history"
            android:textColor="#090909"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtNote"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginBottom="25dp"
            android:text="@string/note_history"
            android:textColor="#090909"
            android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnDelet"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/delete_trip"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>