<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:weightSum="20"
    tools:context=".Sign_Up">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="176dp"
        android:layout_height="119dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/txtlogo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".09"
        android:text="@string/signin1"
        android:textSize="34sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/sign_up_mail_edittext2"
        android:layout_width="310dp"
        android:layout_height="6dp"
        android:layout_weight="3"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/mail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/sign_up_password_edittext2"
        android:layout_width="310dp"
        android:layout_height="6dp"
        android:layout_weight="3"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/forgetpassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="310dp"
        android:layout_height="6dp"
        android:layout_weight="3"
        android:background="@drawable/button"
        android:text="@string/signin1"
        android:textColor="@drawable/button_text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="15dp"
        android:text="@string/orsignin"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="125dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/twitter" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donthaveaccount1" />

</LinearLayout>