<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="65dp"
    android:orientation="vertical"
    tools:context=".Add_Trip">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/trip_name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/start_point"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_start_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/quantum_ic_search_grey600_24"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/endpoint"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_end_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/quantum_ic_search_grey600_24"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="30dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/groupradio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp">

        <!-- In RadioGroup create the 1 Radio Button-->
        <!-- like this we will add some more Radio Button-->
        <RadioButton
            android:id="@+id/radia_id1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="One Way"
            android:textSize="20dp"
            android:onClick="checkedRadioButton"/>

        <RadioButton
            android:id="@+id/radia_id2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Round Trip"
            android:textSize="20dp"
            android:onClick="checkedRadioButton"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_add_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/addtip"
        android:textAllCaps="true"
        android:textColor="@drawable/button_text_color"
        android:textSize="20sp" />


</LinearLayout>