<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Sign_Up">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="119dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/txtlogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="148dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_mail_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:hint="@string/mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_edittext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_confirm_password_edittext"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="45dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:hint="@string/confirm_password"
             />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:text="@string/sign_up"
        android:textColor="@drawable/button_text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/or_sign_up_with"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/googleSignUp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/facebookSignUp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/twetterSignUp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/twitter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|end"
            android:paddingEnd="5dp"
            android:text="@string/have_account"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSignInPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:textColor="@color/green"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>